Added new report interfaces