@@ -1,11 +1,11 @@
-package com.regnosys.rosetta.generator.java.types;
+package com.rosetta.util.types;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.Validate;
-import org.eclipse.xtend2.lib.StringConcatenationClient.TargetStringConcatenation;
 
 
 public class JavaParametrizedType implements JavaReferenceType {
@@ -16,7 +16,7 @@ public class JavaParametrizedType implements JavaReferenceType {
 		Validate.notNull(baseType);
 		Validate.noNullElements(arguments);
 		this.baseType = baseType;
-		this.arguments = List.of(arguments);
+		this.arguments = Arrays.asList(arguments);
 	}
 	
 	public JavaClass getBaseType() {
@@ -37,20 +37,6 @@ public class JavaParametrizedType implements JavaReferenceType {
 	}
 	
 	@Override
-	public void appendTo(TargetStringConcatenation target) {
-		baseType.appendTo(target);
-		target.append("<");
-		if (!arguments.isEmpty()) {
-			arguments.get(0).appendTo(target);
-			for (int i=1; i<arguments.size(); i++) {
-				target.append(", ");
-				arguments.get(i).appendTo(target);
-			}
-		}
-		target.append(">");
-	}
-	
-	@Override
 	public int hashCode() {
 		return Objects.hash(baseType, arguments);
 	}
@@ -63,5 +49,10 @@ public class JavaParametrizedType implements JavaReferenceType {
         JavaParametrizedType other = (JavaParametrizedType) object;
         return Objects.equals(baseType, other.baseType)
         		&& Objects.equals(arguments, other.arguments);
+	}
+	
+	@Override
+	public void accept(JavaTypeVisitor visitor) {
+		visitor.visitType(this);
 	}
 }
